--- a/src/pandora_cloud/flask/templates/login.html
+++ b/src/pandora_cloud/flask/templates/login.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="robots" content="noindex, nofollow" />
-		<title>ChatGPT Vercel</title>
+		<title>ChatGPT 国内破解</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -607,7 +607,7 @@
 					$h1.innerText = text
 				}
 			}
-			updateHeader('ChatGPT Vercel');
+			updateHeader('ChatGPT 国内破解');
 			window.addEventListener('load', function() {
 				const submitBtn = document.querySelector('#submit-token');
 				submitBtn.addEventListener('click', function() {
