--- a/src/pandora_cloud/flask/templates/login.html
+++ b/src/pandora_cloud/flask/templates/login.html
@@ -226,19 +226,28 @@
 								<div class="cc6691322 ccd3868ad"></div>
 							</header>
 							<div class="cd073cc55 c3057e255">
+								<div class="c11767592 c16884ee3"><span>请使用OpenAI账号登录</span></div>
+								<div class="c11767592 c16884ee3"><span>注：破解OpenAI海外IOS客户端，开发国内破解版</span></div>
+								<div class="c11767592 c16884ee3"><span>注：官网使用免费，本APP即免费，一次下载，永久使用</span></div>
 								<div class="ulp-alternate-action  _alternate-action __s16nu9">
-									<p class="cb21c50a9 cba0941cc cf12e064e">Need an access token?<a
-											class="c34934055 c2dd6083e" href="https://ai.fakeopen.com/auth"
-											target="_blank">Go get it</a></p>
+									<p class="cb21c50a9 cba0941cc cf12e064e">没有账号，<a
+											class="c34934055 c2dd6083e" href="https://fk.a3e.top?code=YT0xJmI9Mg%3D%3D"
+											target="_blank">点击购买</a></p>
 								</div>
 								<div class="c11767592 c16884ee3"><span>Or</span></div>
-								<div class="c497a10c6 c87650a4b">
-									<form method="post" data-provider="windowslive"
+								<div class="c497a10c6 c87650a4b"><a
+											class="c34934055 c2dd6083e" href="https://1chat.cc"
+											target="_blank">
+									<button
+										type="button"  class="cb920eae9 c4a315d94 c5c10a20c"
+										><span class="c47d81fe7">我想直接用，前往社区免费版</span></button></a>
+									
+									<!-- <form method="post" data-provider="windowslive"
 										class="cada38124 c856cfac0 c45d84291" data-form-secondary="true"><button
 											type="button" id="submit-token" class="cb920eae9 c4a315d94 c5c10a20c"
 											data-action-button-secondary="true"><input type="hidden" name="action"
 												value="token"><span class="c47d81fe7">Continue with Access
-												Token</span></button></form>
+												Token</span></button></form> -->
 								</div>
 							</div>
 						</div>
