--- a/src/pandora_cloud/flask/templates/login.html
+++ b/src/pandora_cloud/flask/templates/login.html
@@ -606,8 +606,7 @@
 					}.exports(n.querySelector, a, n.timeoutPromise)
 				}();
 			</script>
-			<footer class="oai-footer"><a href="https://github.com/pengzhile/pandora" target="_blank">Pandora on
-					GitHub</a></footer>
+			<footer class="oai-footer"><a href="https://chat.1ai.fun" target="_blank">抖音号：86774033941 永久域名：chat.1ai.fun </a></footer>
 		</div>
 		<script type="text/javascript">
 			function updateHeader(text) {
