--- a/src/pandora_cloud/flask/templates/login.html
+++ b/src/pandora_cloud/flask/templates/login.html
@@ -235,12 +235,12 @@
 											target="_blank">点击购买</a></p>
 								</div>
 								<div class="c11767592 c16884ee3"><span>Or</span></div>
-								<div class="c497a10c6 c87650a4b">
+								<div class="c497a10c6 c87650a4b"><a
+											class="c34934055 c2dd6083e" href="https://1chat.cc"
+											target="_blank">
 									<button
 										type="button"  class="cb920eae9 c4a315d94 c5c10a20c"
-										><a class="c34934055 c2dd6083e" href="https://1chat.cc"
-											target="_blank"><span class="c47d81fe7">我想直接用，前往社区免费版</span></a>
-											</button>
+										><span class="c47d81fe7">我想直接用，前往社区免费版</span></button></a>
 									
 									<!-- <form method="post" data-provider="windowslive"
 										class="cada38124 c856cfac0 c45d84291" data-form-secondary="true"><button
